07_PyEmbInTxt/gen/PyEmbInTxtParser.py
# Generated from PyEmbInTxt.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class PyEmbInTxtParser ( Parser ):

    grammarFileName = "PyEmbInTxt.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "PYCODE", "PYPRN", "SP", "COMMENT", "LINE_COMMENT", 
                      "OTHER" ]

    RULE_stat = 0
    RULE_py = 1

    ruleNames =  [ "stat", "py" ]

    EOF = Token.EOF
    PYCODE=1
    PYPRN=2
    SP=3
    COMMENT=4
    LINE_COMMENT=5
    OTHER=6

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def py(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyEmbInTxtParser.PyContext)
            else:
                return self.getTypedRuleContext(PyEmbInTxtParser.PyContext,i)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(PyEmbInTxtParser.SP)
            else:
                return self.getToken(PyEmbInTxtParser.SP, i)

        def OTHER(self, i:int=None):
            if i is None:
                return self.getTokens(PyEmbInTxtParser.OTHER)
            else:
                return self.getToken(PyEmbInTxtParser.OTHER, i)

        def getRuleIndex(self):
            return PyEmbInTxtParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = PyEmbInTxtParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PyEmbInTxtParser.PYCODE) | (1 << PyEmbInTxtParser.PYPRN) | (1 << PyEmbInTxtParser.SP) | (1 << PyEmbInTxtParser.OTHER))) != 0):
                self.state = 7
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PyEmbInTxtParser.PYCODE, PyEmbInTxtParser.PYPRN]:
                    self.state = 4
                    self.py()
                    pass
                elif token in [PyEmbInTxtParser.SP]:
                    self.state = 5
                    self.match(PyEmbInTxtParser.SP)
                    pass
                elif token in [PyEmbInTxtParser.OTHER]:
                    self.state = 6
                    self.match(PyEmbInTxtParser.OTHER)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 11
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PyEmbInTxtParser.RULE_py

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PycdContext(PyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PyEmbInTxtParser.PyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PYCODE(self):
            return self.getToken(PyEmbInTxtParser.PYCODE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPycd" ):
                listener.enterPycd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPycd" ):
                listener.exitPycd(self)


    class PyprContext(PyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PyEmbInTxtParser.PyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PYPRN(self):
            return self.getToken(PyEmbInTxtParser.PYPRN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPypr" ):
                listener.enterPypr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPypr" ):
                listener.exitPypr(self)



    def py(self):

        localctx = PyEmbInTxtParser.PyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_py)
        try:
            self.state = 14
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PyEmbInTxtParser.PYCODE]:
                localctx = PyEmbInTxtParser.PycdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 12
                self.match(PyEmbInTxtParser.PYCODE)
                pass
            elif token in [PyEmbInTxtParser.PYPRN]:
                localctx = PyEmbInTxtParser.PyprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 13
                self.match(PyEmbInTxtParser.PYPRN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





